@@ -11,6 +11,9 @@ Changes between ecm-6.1.3 and ecm-6.2:
   Brent-Suyama polynomial had degree > 1 and i0 was negative (occurs only
   with non-standard parameters)
 * Added build project for VC++ by Brian Gladman
+* File ecm.h changed from GPL to LGPL: the fact it was under GPL was an
+  unvoluntary mistake, which has the consequence that applications linking with
+  libecm for version < 6.2 should be under GPL too.
 
 Changes between ecm-6.1.2 and ecm-6.1.3:
 * fixed incorrect computation of memory use in stage 2, especially for
